添加了与服务器交互功能，第一页的四个按钮可以用了

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,20 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion '23.0.3'
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
-        applicationId "com.pyz.viewpagerdemo"
+        applicationId "com.wxw.rubbishApp"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
